--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <div id="img-caption">The Flipping best time you can have with a half a stuffed animal</div>
                 </div>
             <!-- <div id="merch">Click Here To BUY!!!!</div> -->
-            <a id="merch" href="https://buyflipazoo.com/?utm_attribute=DMPaidSearchGoogle&utm_term=flipazoo&gclid=Cj0KCQjwivbsBRDsARIsADyISJ9j9ONtIQ59T6wlpDp22RhwXE_8s5EX4m08Vmm30OHkG4oTRVHW9pgaAtsFEALw_wcB" target="_blank">TO BUY ME CLICK HERE!!!!!!!!</a>>
+            <a id="merch" href="https://buyflipazoo.com/?utm_attribute=DMPaidSearchGoogle&utm_term=flipazoo&gclid=Cj0KCQjwivbsBRDsARIsADyISJ9j9ONtIQ59T6wlpDp22RhwXE_8s5EX4m08Vmm30OHkG4oTRVHW9pgaAtsFEALw_wcB" target="_blank">TO ORDER YOURS NOW CLICK HERE!!!!!!!!</a>>
 
             <div id="tribute-info">
                 <ul>
@@ -29,7 +29,7 @@
             <a id="tribute-link" href="https://buyflipazoo.com/?utm_attribute=DMPaidSearchGoogle&utm_term=flipazoo&gclid=Cj0KCQjwivbsBRDsARIsADyISJ9j9ONtIQ59T6wlpDp22RhwXE_8s5EX4m08Vmm30OHkG4oTRVHW9pgaAtsFEALw_wcB" target="_blank"></a>
         
     
-    <a id="merch2" href="https://buyflipazoo.com/?utm_attribute=DMPaidSearchGoogle&utm_term=flipazoo&gclid=Cj0KCQjwivbsBRDsARIsADyISJ9j9ONtIQ59T6wlpDp22RhwXE_8s5EX4m08Vmm30OHkG4oTRVHW9pgaAtsFEALw_wcB" target="_blank">TO BUY ME CLICK HERE!!!!!!!!</a>
+    <a id="merch2" href="https://buyflipazoo.com/?utm_attribute=DMPaidSearchGoogle&utm_term=flipazoo&gclid=Cj0KCQjwivbsBRDsARIsADyISJ9j9ONtIQ59T6wlpDp22RhwXE_8s5EX4m08Vmm30OHkG4oTRVHW9pgaAtsFEALw_wcB" target="_blank">TO ORDER YOURS NOW CLICK HERE!!!!!!!!</a>
 </div>
 </div>
 
